# m-bot

./: .env  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs  tts.rs
src/commands/: mod.rs  ping.rs  pong.rs  roll_call.rs  say.rs  shard.rs  time.rs  voice.rs
