[package]
name = "m-bot"
version = "0.1.0"
authors = ["Nelson J Morais <njmorais@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sample = "0.11.0"
hound = "3.4.0"
find_folder = "0.3.0"
tiny_http = "0.7.0"


[dependencies.serenity]
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "rustls_backend"]
version = "0.7.4"

